Error: l'aplicació es penja i error amb conversií de dates en client
