# comanda-api-models/src/main/java/es/caib/comanda/model/v1/estadistica/Temps.java
@@ -1,5 +1,7 @@
 package es.caib.comanda.model.v1.estadistica;
 
+import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
+import es.caib.comanda.model.v1.deserializer.OffsetDateTimeDeserializer;
 import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -8,6 +10,9 @@ import lombok.NoArgsConstructor;
 import lombok.Setter;
 
 import javax.validation.constraints.NotNull;
+import java.time.OffsetDateTime;
+import java.time.ZoneId;
+import java.time.temporal.IsoFields;
 import java.util.Calendar;
 import java.util.Date;
 
@@ -20,7 +25,8 @@ import java.util.Date;
 public class Temps {
     @Schema(description = "Instant temporal de referència", type = "string", format = "date-time", example = "2025-11-25T00:00:00.000Z")
     @NotNull
-    private Date data;
+    @JsonDeserialize(using = OffsetDateTimeDeserializer.class)
+    private OffsetDateTime data;
     @Schema(description = "Any corresponent a la data", example = "2025")
     @Builder.ObtainVia(field = "data")
     private int anualitat;
@@ -45,13 +51,23 @@ public class Temps {
         cal.setTime(data);
         int mes = cal.get(Calendar.MONTH) + 1;
 
-        this.data = data;
+        this.data = data.toInstant().atZone(ZoneId.systemDefault()).toOffsetDateTime();
         this.anualitat = cal.get(Calendar.YEAR);
         this.trimestre = mes / 3;
         this.mes = mes;
         this.setmana = cal.get(Calendar.WEEK_OF_YEAR);
         this.diaSetmana = DiaSetmanaEnum.valueOf(cal.get(Calendar.DAY_OF_WEEK));
         this.dia = cal.get(Calendar.DAY_OF_MONTH);
+    }
+
+    public Temps(OffsetDateTime data) {
+        this.data = data;
+        this.anualitat = data.getYear();
+        this.mes = data.getMonthValue();
+        this.trimestre = (this.mes - 1) / 3 + 1;
+        this.setmana = data.get(IsoFields.WEEK_OF_WEEK_BASED_YEAR);
+        this.diaSetmana = DiaSetmanaEnum.valueOf(data.getDayOfWeek().ordinal() + 1);
+        this.dia = data.getDayOfMonth();
     }
 
     // Custom builder
@@ -62,7 +78,7 @@ public class Temps {
             cal.setTime(data);
             int mes = cal.get(Calendar.MONTH) + 1;
 
-            this.data = data;
+            this.data = data.toInstant().atZone(ZoneId.systemDefault()).toOffsetDateTime();
             this.anualitat = cal.get(Calendar.YEAR);
             this.trimestre = mes / 3;
             this.mes = mes;
