# comanda-api-models/src/main/java/es/caib/comanda/model/v1/salut/AppInfo.java
@@ -1,5 +1,7 @@
 package es.caib.comanda.model.v1.salut;
 
+import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
+import es.caib.comanda.model.v1.deserializer.OffsetDateTimeDeserializer;
 import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -14,7 +16,7 @@ import javax.validation.Validation;
 import javax.validation.Validator;
 import javax.validation.constraints.NotNull;
 import javax.validation.constraints.Size;
-import java.util.Date;
+import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Set;
 
@@ -39,7 +41,8 @@ public class AppInfo {
 
     @Schema(description = "Data de compilació o de la informació reportada", type = "string", format = "date-time")
     @NotNull
-    private Date data;
+    @JsonDeserialize(using = OffsetDateTimeDeserializer.class)
+    private OffsetDateTime data;
 
     @Schema(description = "Revisió o identificador de commit de la build", example = "a1b2c3d")
     private String revisio;
